--- a/LeaveManagementSystem/package.json
+++ b/LeaveManagementSystem/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
     "axios": "^1.7.4",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.428.0",
